fix overflow email suggestions

--- a/app/assets/stylesheets/lato_view/modules/_form.scss
+++ b/app/assets/stylesheets/lato_view/modules/_form.scss
@@ -217,6 +217,7 @@ textarea {
 // Email autocomplete custom
 .eac-input-wrap {
   width: 100%;
+  overflow: hidden;
 }
 .eac-sugg {
   color: #999;
